feat: standard fields on custom (#4332)
* feat: add ability to sync standard fields on custom object

* fix: clean

* fix: wrong compute during object creation

* fix: missing cascade delete

* fix: remove unused injected class

* fix: naming

* fix: rename factory to paramsFactory and clean

* fix: rename ExtendCustomObjectMetadata to BaseCustomObjectMetadata

* fix: partial fix inconsistent label and description

* Fixes

* Fix

---------

Co-authored-by: Charles Bochet <charles@twenty.com>

--- a/packages/twenty-server/package.json
+++ b/packages/twenty-server/package.json
@@ -28,6 +28,7 @@
     "database:seed:dev": "npx nx command -- workspace:seed:dev",
     "database:seed:demo": "npx nx command -- workspace:seed:demo",
     "database:reset": "npx nx database:truncate && npx nx database:init",
+    "command": "node dist/src/command",
     "queue:work": "node dist/src/queue-worker"
   },
   "dependencies": {
