--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "twenty-emails": ["packages/twenty-emails/src/index.ts"]
+      "twenty-emails": ["packages/twenty-emails/src/index.ts"],
+      "twenty-ui": ["packages/twenty-ui/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
