Add migrate prod command

--- a/packages/twenty-server/package.json
+++ b/packages/twenty-server/package.json
@@ -29,7 +29,8 @@
     "database:seed:demo": "npx nx command -- workspace:seed:demo",
     "database:reset": "npx nx database:truncate && npx nx database:init",
     "command": "node dist/src/command/command",
-    "queue:work": "node dist/src/queue-worker/queue-worker"
+    "queue:work": "node dist/src/queue-worker/queue-worker",
+    "database:migrate:prod": "npx -y typeorm migration:run -d dist/src/database/typeorm/metadata/metadata.datasource && npx -y typeorm migration:run -d dist/src/database/typeorm/core/core.datasource"
   },
   "dependencies": {
     "@graphql-yoga/nestjs": "patch:@graphql-yoga/nestjs@2.1.0#./patches/@graphql-yoga+nestjs+2.1.0.patch",
