--- a/packages/twenty-server/.env.example
+++ b/packages/twenty-server/.env.example
@@ -8,6 +8,7 @@ FRONT_BASE_URL=http://localhost:3001
 ACCESS_TOKEN_SECRET=replace_me_with_a_random_string_access
 LOGIN_TOKEN_SECRET=replace_me_with_a_random_string_login
 REFRESH_TOKEN_SECRET=replace_me_with_a_random_string_refresh
+FILE_TOKEN_SECRET=replace_me_with_a_random_string_refresh
 SIGN_IN_PREFILLED=true
 
 # ———————— Optional ————————
