feat: merge front and server dockerfiles and optimize build (#4589)
* feat: merge front and server dockerfiles and optimize build

* fix: update image label

* fix: bring back support for REACT_APP_SERVER_BASE_URL injection at runtime

* fix: remove old entries & add nx cache in dockerignore

* feat: generate frontend config at runtime using Nest

* fix: format and filename

* feat: use the EnvironmentService and leave default blank

* feat: add support for DB migrations

--- a/packages/twenty-docker/Makefile
+++ b/packages/twenty-docker/Makefile
@@ -29,6 +29,12 @@ prod-docs-build:
 prod-docs-run:
 	@docker run -d -p 3000:3000 --name twenty-docs twenty-docs
 
+prod-build:
+	@cd ../.. && docker build -f ./packages/twenty-docker/prod/twenty/Dockerfile --tag twenty . && cd -
+
+prod-run:
+	@docker run -d -p 3000:3000 --name twenty twenty
+
 prod-front-build:
 	@cd ../.. && docker build -f ./packages/twenty-docker/prod/twenty-front/Dockerfile --tag twenty-front . && cd -
 
