--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
       "runtimeArgs": [
         "nx",
         "run",
-        "twenty-server:start:dev",
+        "twenty-server:start",
       ],
       "outputCapture": "std",
       "internalConsoleOptions": "openOnSessionStart",
