--- a/packages/twenty-server/package.json
+++ b/packages/twenty-server/package.json
@@ -7,29 +7,10 @@
   "license": "AGPL-3.0",
   "scripts": {
     "nx": "NX_DEFAULT_PROJECT=twenty-server node ../../node_modules/nx/bin/nx.js",
-    "prebuild": "rimraf dist",
-    "build": "npx nx prebuild && nest build --path ./tsconfig.build.json",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "NODE_ENV=development && nest start",
-    "start:dev": "npx nx start --watch",
-    "start:debug": "npx nx start:dev --debug",
     "start:prod": "node dist/src/main",
-    "lint": "eslint \"src/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "npx nx test --watch",
-    "test:cov": "npx nx test --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register ../../node_modules/.bin/jest --runInBand",
-    "test:e2e": "./scripts/run-integration.sh",
-    "typeorm": "npx ts-node ../../node_modules/typeorm/cli.js",
-    "database:init": "npx nx database:setup && npx nx database:seed:dev",
-    "database:setup": "npx ts-node ./scripts/setup-db.ts && npx nx database:migrate",
-    "database:truncate": "npx ts-node ./scripts/truncate-db.ts",
-    "database:migrate": "npx nx typeorm -- migration:run -d src/database/typeorm/metadata/metadata.datasource && npx nx typeorm -- migration:run -d src/database/typeorm/core/core.datasource",
-    "database:seed:dev": "npx nx command -- workspace:seed:dev",
-    "database:seed:demo": "npx nx command -- workspace:seed:demo",
-    "database:reset": "npx nx database:truncate && npx nx database:init",
-    "command": "node dist/src/command/command",
-    "queue:work": "node dist/src/queue-worker/queue-worker",
+    "command:prod": "node dist/src/command/command",
+    "worker:prod": "node dist/src/queue-worker/queue-worker",
+    "database:init:prod": "npx ts-node ./scripts/setup-db.ts && yarn database:migrate:prod",
     "database:migrate:prod": "npx -y typeorm migration:run -d dist/src/database/typeorm/metadata/metadata.datasource && npx -y typeorm migration:run -d dist/src/database/typeorm/core/core.datasource"
   },
   "dependencies": {
