feat: add one liner install command (#4613)
* feat: add one liner

* fix: interactive issue & add support for both linux & mac

* feat: move quick start documentation

* feat: catch errors

* feat: check if directory exists

* feat: default to yes for prompt

* feat: open in browser

* fix: format

* feat: do not expose STORAGE_LOCAL_PATH env but handle the case where it would be set

* fix: db reset command wasn't working out of the box

* Update install.sh

Co-authored-by: Darek Desu <4459421+darekdesu@users.noreply.github.com>

* feat: harden the whole UX with one-liner

* fix: small logical order adjustment

* Update packages/twenty-docs/docs/start/self-hosting/docker-compose.mdx

---------

Co-authored-by: Darek Desu <4459421+darekdesu@users.noreply.github.com>
Co-authored-by: Félix Malfait <felix.malfait@gmail.com>

--- a/packages/twenty-docker/prod/docker-compose.yml
+++ b/packages/twenty-docker/prod/docker-compose.yml
@@ -1,11 +1,10 @@
-version: '3.8'
 name: twenty
 
 services:
   server:
     image: twentycrm/twenty:${TAG}
     volumes:
-      - server-local-data:/app/.local-storage
+      - server-local-data:/app/${STORAGE_LOCAL_PATH:-.local-storage}
     ports:
       - "3000:3000"
     environment:
@@ -17,8 +16,10 @@ services:
       ENABLE_DB_MIGRATIONS: true
 
       SIGN_IN_PREFILLED: ${SIGN_IN_PREFILLED}
-      STORAGE_TYPE: local
-      STORAGE_LOCAL_PATH: .local-storage
+      STORAGE_TYPE: ${STORAGE_TYPE}
+      STORAGE_S3_REGION: ${STORAGE_S3_REGION}
+      STORAGE_S3_NAME: ${STORAGE_S3_NAME}
+      STORAGE_S3_ENDPOINT: ${STORAGE_S3_ENDPOINT}
       ACCESS_TOKEN_SECRET: ${ACCESS_TOKEN_SECRET}
       LOGIN_TOKEN_SECRET: ${LOGIN_TOKEN_SECRET}
       REFRESH_TOKEN_SECRET: ${REFRESH_TOKEN_SECRET}
@@ -27,7 +28,7 @@ services:
       db:
         condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "curl --silent --fail http://localhost:3000/healthz | jq -e '.status == \"ok\"' > /dev/null || exit 1"]
+      test: curl --fail http://localhost:3000/healthz
       interval: 5s
       timeout: 5s
       retries: 10
@@ -39,10 +40,8 @@ services:
       - db-data:/bitnami/postgresql
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_ADMIN_PASSWORD}
-      #POSTGRES_USER: ${POSTGRES_USER}
-      #POSTGRES_DB: ${POSTGRES_DB}
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U twenty -d default"]
+      test: pg_isready -U twenty -d default
       interval: 5s
       timeout: 5s
       retries: 10
