--- a/packages/twenty-docker/prod/.env.example
+++ b/packages/twenty-docker/prod/.env.example
@@ -15,3 +15,9 @@ SERVER_URL=http://localhost:3000
 # FILE_TOKEN_SECRET=replace_me_with_a_random_string_refresh
 
 SIGN_IN_PREFILLED=true
+
+STORAGE_TYPE=local
+
+# STORAGE_S3_REGION=eu-west3
+# STORAGE_S3_NAME=my-bucket
+# STORAGE_S3_ENDPOINT=
