chore: upgrade Nx to v18.1.3 (#4706)
Split from https://github.com/twentyhq/twenty/pull/4518

- Upgrades dependencies and applies automatic config migrations with the
command: `npx nx migrate nx` (see
https://nx.dev/nx-api/nx/documents/migrate)
- Fixes lint errors after upgrading `@typescript-eslint`

Note: it was not possible (for now) to migrate Nx to the latest stable
version (v18.2.1) because it upgrades Typescript to v5.4.3, which seems
to cause a bug on install when Yarn tries to apply its native patches.
Might be a bug on the Yarn side.

--- a/package.json
+++ b/package.json
@@ -193,14 +193,14 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@nx/eslint": "17.2.8",
-    "@nx/eslint-plugin": "17.2.8",
-    "@nx/jest": "17.2.8",
-    "@nx/js": "17.2.8",
-    "@nx/react": "17.2.8",
-    "@nx/storybook": "^17.2.8",
-    "@nx/vite": "17.2.8",
-    "@nx/web": "17.2.8",
+    "@nx/eslint": "18.1.3",
+    "@nx/eslint-plugin": "18.1.3",
+    "@nx/jest": "18.1.3",
+    "@nx/js": "18.1.3",
+    "@nx/react": "18.1.3",
+    "@nx/storybook": "18.1.3",
+    "@nx/vite": "18.1.3",
+    "@nx/web": "18.1.3",
     "@storybook/addon-actions": "^7.6.3",
     "@storybook/addon-coverage": "^1.0.0",
     "@storybook/addon-essentials": "^7.6.7",
@@ -217,7 +217,7 @@
     "@storybook/test-runner": "^0.16.0",
     "@storybook/testing-library": "^0.2.2",
     "@stylistic/eslint-plugin": "^1.5.0",
-    "@swc-node/register": "~1.6.7",
+    "@swc-node/register": "1.8.0",
     "@swc/core": "~1.3.100",
     "@swc/helpers": "~0.5.2",
     "@testing-library/jest-dom": "^6.1.5",
@@ -245,7 +245,7 @@
     "@types/lodash.upperfirst": "^4.3.7",
     "@types/luxon": "^3.3.0",
     "@types/ms": "^0.7.31",
-    "@types/node": "^20.10.6",
+    "@types/node": "18.19.26",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "^3.0.8",
     "@types/react": "^18.2.39",
@@ -254,12 +254,12 @@
     "@types/scroll-into-view": "^1.16.0",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
     "@typescript-eslint/experimental-utils": "^5.62.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "@typescript-eslint/utils": "^6.9.1",
+    "@typescript-eslint/parser": "6.21.0",
+    "@typescript-eslint/utils": "6.21.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "@vitest/ui": "~0.34.6",
+    "@vitest/ui": "1.4.0",
     "chromatic": "^6.18.0",
     "concurrently": "^8.2.2",
     "cross-var": "^1.1.0",
@@ -288,7 +288,7 @@
     "jsdom": "~22.1.0",
     "msw": "^2.0.11",
     "msw-storybook-addon": "2.0.0--canary.122.b3ed3b1.0",
-    "nx": "17.2.8",
+    "nx": "18.1.3",
     "playwright": "^1.40.1",
     "prettier": "^3.1.1",
     "raw-loader": "^4.0.2",
@@ -307,7 +307,7 @@
     "vite-plugin-checker": "^0.6.2",
     "vite-plugin-dts": "~2.3.0",
     "vite-plugin-svgr": "^4.2.0",
-    "vitest": "~0.34.6"
+    "vitest": "1.4.0"
   },
   "engines": {
     "node": "^18.17.1",
