feat: init docker compose test (#4730)
Job testing if docker compose is working. It triggers on pull_requests.

--- a/.github/workflows/ci-chromatic.yaml
+++ b/.github/workflows/ci-chromatic.yaml
@@ -4,8 +4,14 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'package.json'
+      - 'packages/twenty-front/**'
   pull_request:
     types: [labeled]
+    paths:
+      - 'package.json'
+      - 'packages/twenty-front/**'
 jobs:
   chromatic-deployment:
     if: contains(github.event.pull_request.labels.*.name, 'run-chromatic') || github.event_name == 'push'
