--- a/.github/workflows/ci-front.yaml
+++ b/.github/workflows/ci-front.yaml
@@ -3,7 +3,13 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'package.json'
+      - 'packages/twenty-front/**'
   pull_request:
+    paths:
+      - 'package.json'
+      - 'packages/twenty-front/**'
 jobs:
   front-yarn-install:
     runs-on: ci-8-cores
