--- a/.github/workflows/ci-server.yaml
+++ b/.github/workflows/ci-server.yaml
@@ -3,7 +3,13 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'package.json'
+      - 'packages/twenty-server/**'
   pull_request:
+    paths:
+      - 'package.json'
+      - 'packages/twenty-server/**'
 jobs:
   server-test:
     runs-on: ubuntu-latest
