--- a/.github/workflows/ci-chrome-extension.yaml
+++ b/.github/workflows/ci-chrome-extension.yaml
@@ -10,6 +10,10 @@ on:
     paths:
       - 'package.json'
       - 'packages/twenty-chrome-extension/**'
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   chrome-extension-yarn-install:
     runs-on: ci-8-cores
@@ -17,10 +21,6 @@ jobs:
       VITE_SERVER_BASE_URL: http://localhost:3000
       VITE_FRONT_BASE_URL: http://localhost:3001
     steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.11.0
-        with:
-            access_token: ${{ github.token }}
       - uses: actions/checkout@v4
       - name: Setup Node.js
         uses: actions/setup-node@v3
