chore: use common eslint config for most packages (#4705)
Split from https://github.com/twentyhq/twenty/pull/4518

Related to #4766 

Mutualizes eslint config between projects.
I didn't include `twenty-server` in this PR as this was causing too many
lint errors.

--- a/packages/twenty-ui/project.json
+++ b/packages/twenty-ui/project.json
@@ -13,7 +13,18 @@
     },
     "lint": {
       "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"]
+      "options": {
+        "eslintConfig": "{projectRoot}/.eslintrc.cjs",
+        "ignorePath": "{workspaceRoot}/.gitignore",
+        "lintFilePatterns": [
+          "{projectRoot}/src/**/*.{ts,tsx,json}",
+          "{projectRoot}/package.json"
+        ]
+      },
+      "configurations": {
+        "ci": { "lintFilePatterns": ["{projectRoot}/**/*.{ts,tsx,json}"] },
+        "fix": { "fix": true }
+      }
     },
     "test": {
       "executor": "@nx/jest:jest",
