--- a/package.json
+++ b/package.json
@@ -193,6 +193,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@next/eslint-plugin-next": "^14.1.4",
     "@nx/eslint": "18.1.3",
     "@nx/eslint-plugin": "18.1.3",
     "@nx/jest": "18.1.3",
@@ -269,7 +270,7 @@
     "eslint": "^8.53.0",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import": "2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^5.1.2",
