--- a/packages/twenty-front/tsconfig.json
+++ b/packages/twenty-front/tsconfig.json
@@ -28,7 +28,7 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
-    "forceConsistentCasingInFileNames": true,
+    "forceConsistentCasingInFileNames": true
   },
   "files": [],
   "include": [],
@@ -39,5 +39,5 @@
     {
       "path": "./tsconfig.spec.json"
     }
-  ],
+  ]
 }
