chore: add script to generate twenty-ui barrels before build (#4707)
Split from https://github.com/twentyhq/twenty/pull/4518

Part of #4766 

Adds a script to auto-generate twenty-ui exports in `index.ts` files.

---------

Co-authored-by: Lucas Bordeau <bordeau.lucas@gmail.com>

--- a/packages/twenty-ui/package.json
+++ b/packages/twenty-ui/package.json
@@ -7,6 +7,6 @@
   "scripts": {
     "nx": "NX_DEFAULT_PROJECT=twenty-ui node ../../node_modules/nx/bin/nx.js",
     "start": "storybook dev -p 6006",
-    "build": "storybook build"
+    "build": "npx vite build"
   }
 }
