--- a/packages/twenty-ui/project.json
+++ b/packages/twenty-ui/project.json
@@ -5,10 +5,19 @@
   "projectType": "library",
   "targets": {
     "build": {
-      "executor": "@nx/vite:build",
-      "outputs": ["{options.outputPath}"],
+      "dependsOn": ["^build", "generateBarrels"]
+    },
+    "generateBarrels": {
+      "executor": "nx:run-commands",
+      "cache": true,
+      "inputs": [
+        "{projectRoot}/src/**/*.{ts,tsx}",
+        "!{projectRoot}/src/**/*.(spec|test).{ts,tsx}",
+        "!{projectRoot}/src/**/*.stories.{ts,tsx}"
+      ],
+      "outputs": ["{projectRoot}/src/index.ts", "{projectRoot}/src/*/index.ts"],
       "options": {
-        "outputPath": "packages/twenty-ui/dist"
+        "command": "npx ts-node --esm {projectRoot}/scripts/generateBarrels.ts"
       }
     },
     "lint": {
