--- a/packages/twenty-ui/tsconfig.lib.json
+++ b/packages/twenty-ui/tsconfig.lib.json
@@ -1,8 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../dist/out-tsc",
-    "types": ["node"]
+    "outDir": "../../dist/out-tsc"
   },
   "exclude": [
     "**/*.spec.ts",
