--- a/packages/twenty-ui/tsconfig.spec.json
+++ b/packages/twenty-ui/tsconfig.spec.json
@@ -7,11 +7,10 @@
   },
   "include": [
     "jest.config.ts",
+    "setupTests.ts",
     "src/**/*.d.ts",
     "src/**/*.spec.ts",
-    "src/**/*.spec.tsx",
     "src/**/*.test.ts",
-    "src/**/*.test.tsx",
     "vite.config.ts"
   ]
 }
