fix: update build script for twenty-emails (#4823)
Fix an issue with the build of the server in docker failing to find vite

--- a/packages/twenty-emails/package.json
+++ b/packages/twenty-emails/package.json
@@ -8,7 +8,7 @@
   "main": "./dist/index.js",
   "scripts": {
     "nx": "NX_DEFAULT_PROJECT=twenty-emails node ../../node_modules/nx/bin/nx.js",
-    "build": "vite build",
+    "build": "npx vite build",
     "lint": "eslint"
   },
   "exports": {
