--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,7 @@
       "type": "node",
       "request": "launch",
       "runtimeExecutable": "yarn",
+      "runtimeVersion": "18",
       "runtimeArgs": [
         "nx",
         "run",
