feat: add SENTRY_RELEASE env (#4912)
Add support for a new SENTRY_RELEASE and SENTRY_ENVIRONMENT env.
It is optional and allows to init sentry with a Release version and an
env (used internally at Twenty).
Docker image have been updated do intergrate the new env as an Argument

--- a/packages/twenty-docker/twenty/Dockerfile
+++ b/packages/twenty-docker/twenty/Dockerfile
@@ -57,6 +57,8 @@ WORKDIR /app/packages/twenty-server
 
 ARG REACT_APP_SERVER_BASE_URL
 ENV REACT_APP_SERVER_BASE_URL $REACT_APP_SERVER_BASE_URL
+ARG SENTRY_RELEASE
+ENV SENTRY_RELEASE $SENTRY_RELEASE
 
 # Copy built applications from previous stages
 COPY --chown=1000 --from=twenty-server-build /app /app
