--- a/package.json
+++ b/package.json
@@ -209,7 +209,6 @@
     "@storybook/addon-interactions": "^7.6.7",
     "@storybook/addon-links": "^7.6.7",
     "@storybook/addon-onboarding": "^1.0.10",
-    "@storybook/addon-themes": "^8.0.0",
     "@storybook/blocks": "^7.6.3",
     "@storybook/core-server": "7.6.3",
     "@storybook/jest": "^0.2.3",
@@ -299,6 +298,7 @@
     "storybook": "^7.6.3",
     "storybook-addon-cookie": "^3.2.0",
     "storybook-addon-pseudo-states": "^2.1.2",
+    "storybook-dark-mode": "^4.0.1",
     "supertest": "^6.1.3",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.2.3",
