--- a/packages/twenty-server/.env.example
+++ b/packages/twenty-server/.env.example
@@ -39,7 +39,10 @@ SIGN_IN_PREFILLED=true
 # LOGGER_DRIVER=console
 # LOGGER_IS_BUFFER_ENABLED=true
 # EXCEPTION_HANDLER_DRIVER=sentry
+# SENTRY_ENVIRONMENT=main
+# SENTRY_RELEASE=latest
 # SENTRY_DSN=https://xxx@xxx.ingest.sentry.io/xxx
+# SENTRY_FRONT_DSN=https://xxx@xxx.ingest.sentry.io/xxx
 # LOG_LEVELS=error,warn
 # MESSAGE_QUEUE_TYPE=pg-boss
 # REDIS_HOST=127.0.0.1
