Compile with swc on twenty-server (#4863)
Experiment using swc instead of tsc (as we did the switch on
twenty-front)

It's **much** faster (at least 5x) but has stricter requirements.
I fixed the build but there's still an error while starting the server,
opening this PR for discussion.

Checkout the branch and try `nx build:swc twenty-server`

Read: https://docs.nestjs.com/recipes/swc#common-pitfalls

--- a/package.json
+++ b/package.json
@@ -220,6 +220,7 @@
     "@storybook/testing-library": "^0.2.2",
     "@stylistic/eslint-plugin": "^1.5.0",
     "@swc-node/register": "1.8.0",
+    "@swc/cli": "^0.3.12",
     "@swc/core": "~1.3.100",
     "@swc/helpers": "~0.5.2",
     "@testing-library/jest-dom": "^6.1.5",
