--- a/packages/twenty-ui/package.json
+++ b/packages/twenty-ui/package.json
@@ -2,10 +2,10 @@
   "name": "twenty-ui",
   "version": "0.4.0",
   "type": "module",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./src/index.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     }
