--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,8 +17,7 @@
     "baseUrl": ".",
     "paths": {
       "twenty-emails": ["packages/twenty-emails/src/index.ts"],
-      "twenty-ui": ["packages/twenty-ui/src/index.ts"],
-      "@ui/*": ["packages/twenty-ui/src/*"]
+      "twenty-ui": ["packages/twenty-ui/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
