chore: add incremental typecheck to twenty-ui (#4947)
Part of #4766

--- a/.github/workflows/ci-front.yaml
+++ b/.github/workflows/ci-front.yaml
@@ -148,6 +148,10 @@ jobs:
           path: node_modules
           key: root-node_modules-${{hashFiles('yarn.lock')}}
           restore-keys: root-node_modules-
+      - name: UI / Run linter
+        run: yarn nx lint twenty-ui
+      - name: UI / Run Typescript Check
+        run: yarn nx typecheck twenty-ui
       - name: Front / Run linter
         run: yarn nx lint:ci twenty-front
       - name: Front / Run Typescript Check
