--- a/packages/twenty-ui/project.json
+++ b/packages/twenty-ui/project.json
@@ -31,7 +31,6 @@
         ]
       },
       "configurations": {
-        "ci": { "lintFilePatterns": ["{projectRoot}/**/*.{ts,tsx,json}"] },
         "fix": { "fix": true }
       }
     },
@@ -40,6 +39,13 @@
       "outputs": ["{projectRoot}/coverage"],
       "options": {
         "jestConfig": "{projectRoot}/jest.config.ts"
+      }
+    },
+    "typecheck": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "{projectRoot}",
+        "command": "tsc -b tsconfig.json --incremental"
       }
     },
     "storybook:dev": {
