feat(ci): add release drafter (#4970)
Add release drafter to the Release CI.
This should create a draft release automatically !

--- a/.github/workflows/ci-release.yaml
+++ b/.github/workflows/ci-release.yaml
@@ -46,3 +46,7 @@ jobs:
           commit_user_name: Github Action Deploy
           commit_user_email: github-action-deploy@twenty.com
           commit_author: Github Action Deploy <github-action-deploy@twenty.com>
+
+      - uses: release-drafter/release-drafter@v5
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
