Introduce remote table entity (#4994)
We will require remote table entity to map distant table name and local
foreign table name.
Introducing the entity:
- new source of truth to know if a table is sync or not
- created synchronously at the same time as metadata and foreign table

Adding a few more changes:
- exception rather than errors so the user can see these
- `pluralize` library that will allow to stop adding `Remote` suffix on
names

---------

Co-authored-by: Thomas Trompette <thomast@twenty.com>

--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
     "pg": "^8.11.3",
     "pg-boss": "^9.0.3",
     "planer": "^1.2.0",
+    "pluralize": "^8.0.0",
     "prettier": "^3.0.3",
     "prism-react-renderer": "^2.1.0",
     "qs": "^6.11.2",
